--- a/Servicios_18_20/Web.config
+++ b/Servicios_18_20/Web.config
@@ -105,7 +105,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EGBVJNT\SQLEXPRESS_2019;initial catalog=DBSuper;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-EGBVJNT\SQLEXPRESS_2019;initial catalog=DBSuper;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="DBSuperEntities" connectionString="metadata=res://*/Models.DBSuper.csdl|res://*/Models.DBSuper.ssdl|res://*/Models.DBSuper.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=db18516.databaseasp.net;initial catalog=db18516;integrated security=False;User Id=db18516; Password=Jy3+8!pM#S2s; Encrypt=False; trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
